--- a/index.html
+++ b/index.html
@@ -5,56 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salon Kosmetyczny FULI</title>
     <style>
+        /* Ogólne style */
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            color: #333;
+            line-height: 1.6;
         }
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+        h1, h2, h3 {
+            margin: 0;
+        }
+
+        /* Nagłówek */
         header {
-            background: #E5107A;
-            color: white;
-            text-align: center;
-            padding: 20px;
+            background: #fff;
+            color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 50px;
+            border-bottom: 1px solid #ddd;
         }
         header img {
-            width: 150px;
+            height: 60px;
         }
         nav {
             display: flex;
-            justify-content: center;
-            background: #333;
+            gap: 20px;
         }
         nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
+            font-weight: bold;
+            text-transform: uppercase;
         }
         nav a:hover {
-            background: #E5107A;
+            color: #E5107A;
         }
-        section {
-            padding: 20px;
+
+        /* Sekcja hero */
+        .hero {
+            background: url('https://via.placeholder.com/1920x600') no-repeat center center/cover;
+            color: white;
+            text-align: center;
+            padding: 150px 20px;
         }
-        .services, .gallery {
+        .hero h1 {
+            font-size: 48px;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            font-size: 18px;
+        }
+
+        /* Sekcja O nas */
+        #about {
             display: flex;
-            flex-wrap: wrap;
+            gap: 40px;
+            padding: 50px;
+            background: #f9f9f9;
+        }
+        #about img {
+            width: 50%;
+            border-radius: 10px;
+        }
+        #about div {
+            width: 50%;
+        }
+
+        /* Sekcja Usługi */
+        #services {
+            text-align: center;
+            padding: 50px;
+        }
+        .services-container {
+            display: flex;
             gap: 20px;
             justify-content: center;
+            flex-wrap: wrap;
         }
-        .services div, .gallery img {
+        .service-card {
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 20px;
             width: 300px;
             text-align: center;
-            border: 1px solid #ddd;
-            padding: 10px;
         }
-        .gallery img {
+        .service-card h3 {
+            margin-bottom: 10px;
+        }
+
+        /* Sekcja Rezerwacja */
+        #booking {
+            background: #E5107A;
+            color: white;
+            text-align: center;
+            padding: 50px;
+        }
+        #booking p {
+            font-size: 18px;
+        }
+
+        /* Sekcja Galeria */
+        #gallery {
+            padding: 50px;
+            text-align: center;
+            background: #f9f9f9;
+        }
+        .gallery-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+        .gallery-container img {
+            width: 100%;
             height: 200px;
             object-fit: cover;
+            border-radius: 10px;
         }
+
+        /* Sekcja Kontakt */
+        #contact {
+            padding: 50px;
+            text-align: center;
+        }
+        #contact p {
+            margin: 10px 0;
+        }
+
+        /* Stopka */
         footer {
             background: #333;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             margin-top: 20px;
         }
     </style>
@@ -62,51 +149,54 @@
 <body>
     <header>
         <img src="./Fuli.jpeg" alt="Logo FULI">
-        <h1>Witamy w Salonie Kosmetycznym FULI</h1>
+        <nav>
+            <a href="#about">O nas</a>
+            <a href="#services">Usługi</a>
+            <a href="#booking">Rezerwacja</a>
+            <a href="#gallery">Galeria</a>
+            <a href="#contact">Kontakt</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#about">O nas</a>
-        <a href="#services">Usługi</a>
-        <a href="#booking">Rezerwacja</a>
-        <a href="#gallery">Galeria</a>
-        <a href="#contact">Kontakt</a>
-    </nav>
+
+    <section class="hero">
+        <h1>Salon Kosmetyczny FULI</h1>
+        <p>Twoje piękno w najlepszych rękach</p>
+    </section>
 
     <section id="about">
-        <h2>O nas</h2>
-        <p>Salon kosmetyczny FULI to miejsce, w którym piękno spotyka się z profesjonalizmem. Nasz zespół doświadczonych kosmetologów dba o Twoją skórę i dobre samopoczucie, oferując szeroki zakres usług pielęgnacyjnych i upiększających. Naszym celem jest zapewnienie Ci chwili relaksu i spektakularnych efektów zabiegów.</p>
+        <img src="https://via.placeholder.com/600x400" alt="O nas">
+        <div>
+            <h2>O nas</h2>
+            <p>Salon kosmetyczny FULI to miejsce, w którym piękno spotyka się z profesjonalizmem. Nasz zespół doświadczonych kosmetologów dba o Twoją skórę i dobre samopoczucie.</p>
+        </div>
     </section>
 
     <section id="services">
         <h2>Nasze usługi</h2>
-        <div class="services">
-            <div>
+        <div class="services-container">
+            <div class="service-card">
                 <h3>Zabieg oczyszczania twarzy</h3>
                 <p>Cena: 200 zł</p>
             </div>
-            <div>
+            <div class="service-card">
                 <h3>Manicure hybrydowy</h3>
                 <p>Cena: 120 zł</p>
             </div>
-            <div>
+            <div class="service-card">
                 <h3>Pedicure SPA</h3>
                 <p>Cena: 150 zł</p>
-            </div>
-            <div>
-                <h3>Masaż relaksacyjny</h3>
-                <p>Cena: 180 zł</p>
             </div>
         </div>
     </section>
 
     <section id="booking">
         <h2>Rezerwacja online</h2>
-        <p>Rezerwacje możliwe są za pośrednictwem platformy <strong>Booksy</strong>. Wkrótce dodamy pełną integrację.</p>
+        <p>Rezerwacje możliwe są za pośrednictwem platformy <strong>Booksy</strong>.</p>
     </section>
 
     <section id="gallery">
         <h2>Galeria</h2>
-        <div class="gallery">
+        <div class="gallery-container">
             <img src="https://via.placeholder.com/300x200" alt="Galeria 1">
             <img src="https://via.placeholder.com/300x200" alt="Galeria 2">
             <img src="https://via.placeholder.com/300x200" alt="Galeria 3">
@@ -115,14 +205,13 @@
 
     <section id="contact">
         <h2>Kontakt</h2>
-        <p><strong>Adres:</strong> ul. Piękna 12, 00-001 Warszawa</p>
-        <p><strong>Telefon:</strong> +48 123 456 789</p>
-        <p><strong>Email:</strong> kontakt@fuli-salon.pl</p>
+        <p>ul. Piękna 12, 00-001 Warszawa</p>
+        <p>+48 123 456 789</p>
+        <p>kontakt@fuli-salon.pl</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Salon Kosmetyczny FULI. Wszystkie prawa zastrzeżone.</p>
+        &copy; 2024 Salon Kosmetyczny FULI. Wszystkie prawa zastrzeżone.
     </footer>
 </body>
 </html>
-
