--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             right: 50px;
             display: flex;
             gap: 10px;
+            align-items: center;
         }
         .social-icons a {
             display: inline-block;
@@ -50,15 +51,56 @@
             opacity: 0.8;
         }
 
+        /* Adres klikalny */
+        .contact-info {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .contact-info a {
+            font-size: 14px;
+            color: #333;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+        .contact-info img {
+            width: 25px;
+            height: 25px;
+        }
+        .contact-info a:hover {
+            color: #E5107A;
+        }
+
         /* Pasek nawigacji */
         nav {
-            background: #f9f9f9;
+            background: #F8F6F3;
             display: flex;
             justify-content: center;
             gap: 40px;
-            border-top: 1px solid #ddd;
-            border-bottom: 1px solid #ddd;
+            border-top: 1px solid transparent;
+            border-bottom: 1px solid transparent;
             padding: 10px 0;
+            position: relative;
+        }
+        nav::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(to right, transparent, #ccc, transparent);
+        }
+        nav::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(to right, transparent, #ccc, transparent);
         }
         nav a {
             font-weight: bold;
@@ -68,6 +110,21 @@
         }
         nav a:hover {
             color: #E5107A;
+        }
+
+        /* Pasek - efekt zanikania */
+        nav::after {
+            height: 4px;
+            background: linear-gradient(to right, rgba(204, 204, 204, 0), rgba(204, 204, 204, 0.7), rgba(204, 204, 204, 0));
+        }
+        nav::before {
+            height: 4px;
+            background: linear-gradient(to right, rgba(204, 204, 204, 0), rgba(204, 204, 204, 0.7), rgba(204, 204, 204, 0));
+        }
+
+        /* Efekt muśnięcia pędzlem */
+        nav {
+            box-shadow: inset 0 10px 15px -10px rgba(204, 204, 204, 0.5), inset 0 -10px 15px -10px rgba(204, 204, 204, 0.5);
         }
 
         /* Menu rozwijane */
@@ -97,106 +154,6 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
-
-        /* Sekcja hero */
-        .hero {
-            background: url('https://via.placeholder.com/1920x600') no-repeat center center/cover;
-            color: white;
-            text-align: center;
-            padding: 150px 20px;
-        }
-        .hero h1 {
-            font-size: 48px;
-            margin-bottom: 10px;
-        }
-        .hero p {
-            font-size: 18px;
-        }
-
-        /* Sekcja O mnie */
-        #about {
-            display: flex;
-            gap: 40px;
-            padding: 50px;
-            background: #f9f9f9;
-        }
-        #about img {
-            width: 50%;
-            border-radius: 10px;
-        }
-        #about div {
-            width: 50%;
-        }
-
-        /* Sekcja Oferta */
-        #services {
-            text-align: center;
-            padding: 50px;
-        }
-        .services-container {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .service-card {
-            background: white;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 20px;
-            width: 300px;
-            text-align: center;
-        }
-        .service-card h3 {
-            margin-bottom: 10px;
-        }
-
-        /* Sekcja Rezerwacja */
-        #booking {
-            background: #E5107A;
-            color: white;
-            text-align: center;
-            padding: 50px;
-        }
-        #booking p {
-            font-size: 18px;
-        }
-
-        /* Sekcja Galeria */
-        #gallery {
-            padding: 50px;
-            text-align: center;
-            background: #f9f9f9;
-        }
-        .gallery-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        .gallery-container img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-
-        /* Sekcja Kontakt */
-        #contact {
-            padding: 50px;
-            text-align: center;
-        }
-        #contact p {
-            margin: 10px 0;
-        }
-
-        /* Stopka */
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
@@ -209,28 +166,21 @@
             <a href="https://www.facebook.com/share/1DWGAvSQoj/?mibextid=wwXIfr" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook">
             </a>
+            <a href="https://booksy.com/pl-pl/102793_centrum-urody-roza_fryzjer_3_warszawa#ba_s=seo" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Booksy_logo.png" alt="Booksy">
+            </a>
+        </div>
+        <div class="contact-info">
+            <a href="https://www.google.com/maps/place/Rose+Beauty+Center">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/97/Google_Maps_icon.png" alt="Google Maps">
+                320, Puławska 02-845, 02-566 Warszawa
+            </a>
         </div>
     </header>
 
     <nav>
-        <div class="dropdown">
-            <a href="#about">O mnie</a>
-            <div class="dropdown-content">
-                <a href="#history">Moja historia</a>
-                <a href="#mission">Moja misja</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <a href="#services">Oferta</a>
-            <div class="dropdown-content">
-                <a href="#cosmetology">Kosmetologia</a>
-                <a href="#trichology">Trychologia</a>
-                <a href="#oncology">Pacjent Onkologiczny</a>
-            </div>
-        </div>
-        <a href="#booking">Rezerwacja</a>
-        <a href="#gallery">Galeria</a>
-        <a href="#contact">Kontakt</a>
+        <a href="#about">O mnie</a>
+        <a href="#services">Oferta</a>
     </nav>
 
     <footer>
