--- a/index.html
+++ b/index.html
@@ -167,21 +167,16 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook">
             </a>
             <a href="https://booksy.com/pl-pl/102793_centrum-urody-roza_fryzjer_3_warszawa#ba_s=seo" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Booksy_logo.png" alt="Booksy">
+                <img src="https://play-lh.googleusercontent.com/jVXZkyM4cUgKzAJwSZVxzwAM1Y6EgIQNNAf3qU3ZvZdJ4EbsXYg9E6w9GJFyrGtlTMM" alt="Booksy">
             </a>
         </div>
         <div class="contact-info">
-            <a href="https://www.google.com/maps/place/Rose+Beauty+Center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/97/Google_Maps_icon.png" alt="Google Maps">
+            <a href="https://www.google.com/maps/place/Rose+Beauty+Center/@52.1441122,21.0171623,17z/data=!3m1!4b1!4m6!3m5!1s0x47193261a591d4ab:0xa637a23daf609481!8m2!3d52.1441122!4d21.0171623!16s%2Fg%2F1ty72__c?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoJLDEwMjExMjM0SAFQAw%3D%3D">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Google_Maps_Logo_2020.svg/512px-Google_Maps_Logo_2020.svg.png" alt="Google Maps">
                 320, Puławska 02-845, 02-566 Warszawa
             </a>
         </div>
     </header>
-
-    <nav>
-        <a href="#about">O mnie</a>
-        <a href="#services">Oferta</a>
-    </nav>
 
     <footer>
         &copy; 2024 Salon Kosmetyczny FULI. Wszystkie prawa zastrzeżone.
