--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
         </div>
     </header>
 
+    <nav>
+        <a href="#about">O mnie</a>
+        <a href="#services">Oferta</a>
+        <a href="#booking">Rezerwacja</a>
+        <a href="#gallery">Galeria</a>
+        <a href="#contact">Kontakt</a>
+    </nav>
+
     <footer>
         &copy; 2024 Salon Kosmetyczny FULI. Wszystkie prawa zastrzeżone.
     </footer>
