--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </head>
 <body>
     <header>
-        <img src="./Fuli.jpeg" alt="Logo FULI">
+        <img src="/mnt/data/Fuli.png" alt="Logo FULI">
         <div class="social-icons">
             <a href="https://www.instagram.com/fuli_warszawa?igsh=MXVxYjJzZndwajg3aQ==" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
@@ -171,7 +171,7 @@
             </a>
         </div>
         <div class="contact-info">
-            <a href="https://www.google.com/maps/place/Rose+Beauty+Center/@52.1441122,21.0171623,17z/data=!3m1!4b1!4m6!3m5!1s0x47193261a591d4ab:0xa637a23daf609481!8m2!3d52.1441122!4d21.0171623!16s%2Fg%2F1ty72__c?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoJLDEwMjExMjM0SAFQAw%3D%3D">
+            <a href="https://www.google.com/maps/place/Rose+Beauty+Center/@52.1441122,21.0171623,17z/data=!3m1!4b1!4m6!3m5!1s0x47193261a591d4ab:0xa637a23daf609481!8m2!3d52.1441122!4d21.0171623">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Google_Maps_Logo_2020.svg/512px-Google_Maps_Logo_2020.svg.png" alt="Google Maps">
                 320, Puławska 02-845, 02-566 Warszawa
             </a>
