--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </head>
 <body>
     <header>
-        <img src="/mnt/data/Fuli.png" alt="Logo FULI">
+        <img src="./Fuli.png" alt="Logo FULI">
         <div class="social-icons">
             <a href="https://www.instagram.com/fuli_warszawa?igsh=MXVxYjJzZndwajg3aQ==" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
